# ThemePark-Designer

./: .gitignore  AttractionManager.cpp  AttractionManager.h  CMakeLists.txt  IMGUI_SETUP.md  Makefile  MerryGoRound.cpp  MerryGoRound.h  README.md  main_modular.cpp
Obj_texture/merry-go-round/source/: merry-go-round.mtl
assets/food stalls/source/: Untitled.mtl
include/: ferrisWheel.h  imgui_setup.h  merryGoRound.h  path.h  pond.h  renderer.h  renderer3d.h  simple3d.h  stall.h
include/algorithms/: bresenham.h  midpoint_circle.h
include/attractions/: FoodStall.h  GameStall.h  MerryGoRound.h  Road.h
include/core/: Attraction.h  ThemePark.h
include/glad/: glad.h
include/managers/: AttractionManager.h  RoadManager.h
include/utils/: RoadGenerator.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
main/: main.cpp
src/: glad.c  imgui_setup.cpp  main.cpp  renderer.cpp  renderer3d.cpp  simple3d.cpp  stall.cpp
src/algorithms/: bresenham.cpp  midpoint_circle.cpp
src/attractions/: FoodStall.cpp  GameStall.cpp  MerryGoRound.cpp  Road.cpp
src/core/: main_modular.cpp
src/managers/: AttractionManager.cpp  RoadManager.cpp
src/utils/: RoadGenerator.cpp
